tests/invalid/import_from_inside_except/main.py
def main() -> None:
    try:
        x: int = 1
    except Exception:
        from imports import module_a
